--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,19 @@
-<h1>Make your form here</h1>
+<h1>Pirate Form</h1>
+    <form method="POST" action="/pirates">
+        <h2>Pirate</h2>
+            <label>Name</label><input type="text" name="pirate[name]" /><br>
+            <label>Weight</label><input type="text" name="pirate[weight]" /><br>
+            <label>Height</label><input type="text" name="pirate[height]" /><br>
+
+        <h2>Ship 1</h2>
+            <label>Name</label><input id="ship_name_1" type="text" name="pirate[ships][][name]" /><br>
+            <label>Type</label><input id="ship_type_1" type="text" name="pirate[ships][][type]" /><br>
+            <label>Booty</label><input id="ship_booty_1" type="text" name="pirate[ships][][booty]" /><br>
+
+        <h2>Ship 2</h2>
+            <label>Name</label><input id="ship_name_2" type="text" name="pirate[ships][][name]" /><br>
+            <label>Type</label><input id="ship_type_2" type="text" name="pirate[ships][][type]" /><br>
+            <label>Booty</label><input id="ship_booty_2" type="text" name="pirate[ships][][booty]" /><br>
+
+        <input type="submit" value="Submit"/>
+    </form>
