--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,33 @@
-<h1>Make your form here</h1>
+<form method='POST' action='/pirates'> 
+<h2>Pirate</h2>
+    <label for="pirate_name">Pirate's name:</label>
+    <input id="pirate_name" type="text" name="pirate[name]"><br>
+
+    <label for="pirate_weight">Pirate's weight:</label>
+    <input id="pirate_weight" type="text" name="pirate[weight]"><br>
+    
+    <label for="pirate_height">Pirate's height:</label>
+    <input id="pirate_height" type="text" name="pirate[height]"><br>
+<h2>Ship(s)</h2>
+
+<h3>Ship 1</h3>
+    <label for="ship_name_1">Ship 1 name:</label>
+    <input id="ship_name_1" type="text" name="pirate[ships][][name]"><br>
+
+    <label for="ship_type_1">Ship 1 type:</label>
+    <input id="ship_type_1" type="text" name="pirate[ships][][type]"><br>
+    
+    <label for="ship_booty_1">Ship 1 booty:</label>
+    <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"><br>
+<h3>Ship 2</h3>
+    <label for="ship_name_2">Ship 2 name:</label>
+    <input id="ship_name_2" type="text" name="pirate[ships][][name]"><br>
+
+    <label for="ship_type_2">Ship 2 type:</label>
+    <input id="ship_type_2" type="text" name="pirate[ships][][type]"><br>
+    
+    <label for="ship_booty_2">Ship 2 booty:</label>
+    <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"><br>
+
+    <input type="submit" id="Submit">
+</form>
